--- a/README.yml
+++ b/README.yml
@@ -4,12 +4,13 @@ owner:
     name: Ajinkya Khamkar
     url: https://github.com/bigdata-i523/hid211
 paper1:
-    abstract: "Deep Neural networks are inherently parallel in nature. Research is\
-        \ generally focused on the \"going deeper\" paradigm. More recent research\
-        \ is concentrated on \"going wider\" instead of just going deep.  Wider paradigms\
-        \ have computational advantage since they, can be executed concurrently in\
-        \ a distributed environment. They do not possess the constraint of data sharing\
-        \ between concurrent blocks. \n"
+    abstract: >
+         Deep Neural networks are inherently parallel in nature. Research is
+         generally focused on the going deeper paradigm. More recent research
+         is concentrated on going wider instead of just going deep.  Wider paradigms
+         have computational advantage since they, can be executed concurrently in
+         a distributed environment. They do not possess the constraint of data sharing
+         between concurrent blocks.
     author:
         - Khamkar, Ajinkya
     chapter: Machine Learning
