--- a/README.yml
+++ b/README.yml
@@ -16,7 +16,7 @@ paper1:
     chapter: Machine Learning
     hid:
         - 211
-    status: 100%
+    status: 10/27/2017 99%
     title: Distributed environment for neural network
     type: latex
     url: https://github.com/bigdata-i523/hid211/paper1/
