--- a/README.yml
+++ b/README.yml
@@ -21,6 +21,7 @@ paper1:
     type: latex
     url: https://github.com/bigdata-i523/hid211/paper1/
 paper2:
+    review: Nov 6 2017
     abstract: Machine learning algorithms are computationally and time expensive. Optimizations are required to machine learning algorithms to improve their performance for big data.  
     author:
         - Khamkar, Ajinkya
