--- a/README.yml
+++ b/README.yml
@@ -32,3 +32,14 @@ paper2:
     title: Machine learning optimizations for big data
     type: report
     url: https://github.com/bigdata-i523/hid211/paper2/
+project:
+    review: Dec 4 2017
+    abstract: Machine learning algorithms are computationally and time expensive. Optimizations are required to machine learning algorithms to improve their performance for big data.  
+    author:
+        - Khamkar, Ajinkya
+    chapter: Machine Learning
+    hid:
+        - 211    
+    title: Continuous motion tracking using Deep Neural Networks and Recurrent Neural Networks
+    type: report
+    url: https://github.com/bigdata-i523/hid211/project/
