--- a/README.yml
+++ b/README.yml
@@ -42,3 +42,4 @@ project:
     title: Continuous motion tracking using Deep Neural Networks and Recurrent Neural Networks
     type: report
     url: https://github.com/bigdata-i523/hid211/project/
+    status: 12/05/2017 100%
