--- a/README.yml
+++ b/README.yml
@@ -43,4 +43,4 @@ project:
     type: report
     url: https://github.com/bigdata-i523/hid211/project/
     status: 12/05/2017 100%
-    chapter: TRansportation
+    chapter: Transportation
