--- a/README.yml
+++ b/README.yml
@@ -42,5 +42,5 @@ project:
     title: Continuous motion tracking using Deep Neural Networks and Recurrent Neural Networks
     type: report
     url: https://github.com/bigdata-i523/hid211/project/
-    status: 12/05/2017 100%
+    status: Dec 5 2017 100%
     chapter: Transportation
